# app/Models/Cliente.php
@@ -5,12 +5,84 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\SoftDeletes;
 
+/**
+ * @OA\Schema()
+ */
 class Cliente extends Model
 {
     use SoftDeletes;
 
     protected $dates = ['deleted_at'];
-
+    /**
+     * The product name
+     * @var string
+     *
+     * @OA\Property(
+     *   property="nombres",
+     *   type="string",
+     *   description="Nombres del producto"
+     * )
+     */
+    /**
+     * The product name
+     * @var string
+     *
+     * @OA\Property(
+     *   property="apellidos",
+     *   type="string",
+     *   description="Apellidos del producto"
+     * )
+     */
+    /**
+     * The product name
+     * @var string
+     *
+     * @OA\Property(
+     *   property="correo",
+     *   type="string",
+     *   description="correo del producto"
+     * )
+     */
+    /**
+     * The product name
+     * @var string
+     *
+     * @OA\Property(
+     *   property="telefono",
+     *   type="string",
+     *   description="telefono del producto"
+     * )
+     */
+        /**
+     * The product name
+     * @var string
+     *
+     * @OA\Property(
+     *   property="direccion",
+     *   type="string",
+     *   description="direccion del producto"
+     * )
+     */
+    /**
+     * The product name
+     * @var string
+     *
+     * @OA\Property(
+     *   property="numero_documento",
+     *   type="string",
+     *   description="numero_documento del producto"
+     * )
+     */
+    /**
+     * The product name
+     * @var string
+     *
+     * @OA\Property(
+     *   property="tipo_documento_id",
+     *   type="string",
+     *   description="tipo_documento_id del producto"
+     * )
+     */
     public $fillable = [
         'nombres',
         'apellidos',
